# ANN4Fun

./: .gitignore  ANN.hpp  AbstractTutor.hpp  AdamTutor.hpp  Arctan.hpp  Assertion.hpp  BackendOpenMP.hpp  CHANGES  CMakeLists.txt  Composition.hpp  DataHolder.hpp  Doxyfile  Dropout.hpp  ELU.hpp  Gain.hpp  Generator.hpp  IDataHolder.hpp  ITensor.hpp  Input.hpp  Layer.hpp  Learnable.hpp  Makefile  Model.hpp  NesterovTutor.hpp  Normalize.hpp  README.md  ReLU.hpp  ReLUx.hpp  Reshape.hpp  SELU.hpp  SiLU.hpp  SimpleTutor.hpp  SkipConnections.hpp  SoftMax.hpp  Succession.hpp  Successor.hpp  Tensor.hpp  Tensor2JPEG.hpp  TensorMath.hpp  TensorOMP.hpp  (+2 more)
ann4fun/: ANN.hpp  AbstractTutor.hpp  AdamTutor.hpp  BackendOpenMP.hpp  CrossEntropy.hpp  DataHolder.hpp  Dropout.hpp  Generator.hpp  IBackendFactory.hpp  Input.hpp  Layer.hpp  Linear.hpp  Model.hpp  Normalize.hpp  PCA_Layer.hpp  ReLU.hpp  ReLUx.hpp  SELU.hpp  SkipConnections.hpp  SoftMax.hpp  Succession.hpp
examples/: CMakeLists.txt  MNIST.hpp  Makefile
examples/MNIST.GAN/: CMakeLists.txt  Makefile  main.cpp
examples/MNIST.autoencoder/: CMakeLists.txt  Makefile  main.cpp
examples/MNIST.classifier/: CMakeLists.txt  Makefile  main.cpp  main.cpp.orig
examples/fuzzy2jpeg/: CMakeLists.txt  Makefile  main.cpp
examples/units/: Makefile  main.cpp
misc/: MNIST.hpp  TestGains.hpp  TestXOR.hpp  Timer.hpp
units/: CMakeLists.txt  Console.hpp  Makefile  ModelTest.hpp  OnlineStatistics.hpp  TestGains.hpp  TestRot3.hpp  TestXOR.hpp  Timer.hpp
units/Arctan/: CMakeLists.txt  Makefile  main.cpp
units/DataHolder/: CMakeLists.txt  Makefile  main.cpp
units/Dropout/: CMakeLists.txt  Makefile  main.cpp
units/ELU/: CMakeLists.txt  main.cpp
units/Gain/: CMakeLists.txt  main.cpp
units/Generator/: CMakeLists.txt  main.cpp
units/Input/: CMakeLists.txt  main.cpp
units/Layer/: CMakeLists.txt  main.cpp
units/MNIST/: CMakeLists.txt  main.cpp
units/Model/: CMakeLists.txt  Makefile  main.cpp
units/PCA_Layer/: CMakeLists.txt  main.cpp
units/ReLU/: CMakeLists.txt  main.cpp
units/ReLUx/: CMakeLists.txt  main.cpp
units/Reshape/: CMakeLists.txt  main.cpp
units/SELU/: CMakeLists.txt  main.cpp
units/SiLU/: CMakeLists.txt  main.cpp
units/SkipConnections/: CMakeLists.txt  main.cpp
units/SoftMax/: CMakeLists.txt  main.cpp
units/Tensor2JPEG/: CMakeLists.txt  Makefile  main.cpp
units/Tutors/: CMakeLists.txt  main.cpp
units/Wire/: CMakeLists.txt  main.cpp
